# sqlite-loadable-rs

./: Cargo.toml  Makefile  README.md
.github/workflows/: test.yaml
examples/: characters.rs  hello.rs  load_permanent.rs  scalar.rs  series.rs  stress.rs
sqlite-loadable-macros/: Cargo.toml
sqlite-loadable-macros/src/: lib.rs
src/: api.rs  collation.rs  ext.rs  scalar.rs  table.rs
tests/: test_collation.rs  test_find_function.rs  test_hello.rs  test_manual_load.rs  test_series.rs  test_vtab_in.rs
