[package]
name = "sqlite-loadable"
version = "0.0.6-alpha.6"
edition = "2024"
authors = [
    "Alex Garcia <alexsebastian.garcia@gmail.com>",
    "Thorben Baerentson <thorben.baerentson@gmail.com>"
]
description = "A framework for building SQLite extensions in Rust"
homepage = "https://github.com/thorbenbaerentson/sqlite-loadable-rs"
repository = "https://github.com/thorbenbaerentson/sqlite-loadable-rs"
keywords = ["sqlite"]
license = "MIT/Apache-2.0"

[dependencies]
sqlite3ext-sys = { version="0.0.1", path="./sqlite3ext-sys" }
sqlite-loadable-macros={version="0.0.3", path="./sqlite-loadable-macros"}
serde = { version="1.0.219", features = ["derive"] }
serde_json = "1.0.140"
bitflags = "2.9.1"
libsqlite3-sys = { version="0.33.0", optional=true, features=["bundled"] }

[dev-dependencies]
rusqlite = "0.35.0"
libsqlite3-sys = { version="0.33.0", default-features = false, features=["bundled"] }

[features]
static = ["libsqlite3-sys"]
exec = []

[lib]
doctest = false

[[example]]
name = "hello"
crate-type = ["cdylib", "staticlib"]

[[example]]
name = "series"
crate-type = ["cdylib"]

[[example]]
name = "stress"
crate-type = ["cdylib"]

[[example]]
name = "scalar"
crate-type = ["cdylib"]

[[example]]
name = "characters"
crate-type = ["cdylib"]

[[example]]
name = "load_permanent"
crate-type = ["cdylib"]
